# polyedge

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  backtest.py  markets.py  news.py  portfolio.py  signals.py  trades.py
backend/app/core/: analyst.py  formulas.py  risk_manager.py  scanner.py
backend/app/integrations/: gamma_client.py  news_sources.py  openai_client.py
backend/app/models/: signal.py
backend/polyedge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_formulas.py
docs/: API.md  ARCHITECTURE.md  FORMULAS.md  RISK_DISCLAIMER.md  SETUP.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/components/: LineChart.tsx
openclaw-skill/: SKILL.md
openclaw-skill/prompts/: market_analysis.md
scripts/: dev.sh  setup.sh  tunnel.sh
