[project]
name = "polyedge-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "openai>=1.107.0",
  "pytest>=8.4.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
